[gd_scene load_steps=12 format=2]

[ext_resource path="res://source/enemies/melee enemies/blitz/blitz.glb" type="PackedScene" id=1]
[ext_resource path="res://source/enemies/enemy stuff/CharacterMover.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/Player/scenes/HealthManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/enemies/enemy stuff/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/enemies/enemy stuff/DamageArea.gd" type="Script" id=6]
[ext_resource path="res://source/enemies/enemy stuff/Monster.gd" type="Script" id=7]
[ext_resource path="res://source/enemies/enemy stuff/AimAtObject.gd" type="Script" id=10]
[ext_resource path="res://source/enemies/enemy stuff/effects/BloodParticles.tscn" type="PackedScene" id=12]
[ext_resource path="res://source/Collectables/CollectableExp.tscn" type="PackedScene" id=13]

[sub_resource type="CapsuleShape" id=1]
radius = 0.447709
height = 1.64655

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.645677, 0.618753, 0.545634 )

[node name="Blitz" type="KinematicBody" groups=[
"enemies",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 7 )

[node name="Mesh" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.2557, 0, 0.336465, 0, 1.3, 0, -0.336465, 0, 1.2557, 0, 0, 0 )

[node name="BoneAttachment" type="BoneAttachment" parent="Mesh/Armature/Skeleton" index="1"]
transform = Transform( 0.993288, -0.0697367, -0.0922856, 0.111656, 0.369663, 0.922432, -0.0302128, -0.926545, 0.374969, 0.745998, 5.2246, -162.82 )
bone_name = "mixamorig_spine_1"

[node name="HitBox" parent="Mesh/Armature/Skeleton/BoneAttachment" instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.28381, 0 )
shape = SubResource( 1 )

[node name="HealthManager" parent="." instance=ExtResource( 4 )]
max_health = 60

[node name="CharacterMover" parent="." instance=ExtResource( 2 )]
move_accel = 3
max_speed = 7
ignore_rotation = true

[node name="AimAtObject" type="Spatial" parent="."]
script = ExtResource( 10 )

[node name="DamageArea" type="Area" parent="AimAtObject"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )
damage = 10

[node name="CollisionShape" type="CollisionShape" parent="AimAtObject/DamageArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39279, 0.923861 )
shape = SubResource( 2 )

[node name="BloodParticles" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60912, 0 )

[node name="CollectableExp" parent="." instance=ExtResource( 13 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Mesh"]
